<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    <include layout="@layout/ornament"/>

    <LinearLayout  android:id="@+id/dish_title"
        style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
    </LinearLayout>

	<LinearLayout
		android:padding="10dp"
    	android:orientation="horizontal"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:weightSum="3">
	    <EditText
			android:id="@+id/nick_name"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:hint="@string/set_nickname"
			android:layout_weight="1" />
		<Button
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_weight="2" 
			android:text="@string/save"
			android:onClick="onNickSave"/>
	</LinearLayout>	
	
	<ImageView style="@style/CommentsSeparator" />	
		
	<LinearLayout
    	android:padding="10dp"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:onClick="onUpgrade"
    	android:orientation="horizontal">
        <ImageView android:id="@+id/photo"
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_vertical"
    		android:background="@drawable/ic_launcher"
    		android:onClick="onUpgrade"/>
        <TextView android:id="@+id/name"
        	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:paddingLeft="10dp"
    		android:layout_gravity="center_vertical"
    		android:text="@string/pan_galushka_link"
	        android:textColor="@color/foreground2"
        	android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>    
	
    
</LinearLayout>
